# sql-alchemy-demo

./: README.md  config.py  crud.py  models.py  pyproject.toml
